# twidilers

./: .gitignore  Dockerfile  compose.prod.yaml  compose.yaml  deployment.md  package-lock.json  pyproject.toml  readme.md
certbot/: init_certbot.sh
instance/: memory
migrations/versions/: 270025091fe0_initial_migration.py  2e046ba4f57e_migration_message_here.py  42368c527aac_added_likes_column.py  44be65770f7a_first_migration.py  9461c606bfe2_fixed_likes_column.py  e9133ab1fb8f_migration_message_here3.py
nginx/: nginx.conf
twidilers/: .env  README.md  __init__.py  database.py  functions.py  models.py  objects.py  readme.md
twidilers/ami/: __init__.py  functions.py  models.py  routes.py
twidilers/ami/static/styles/: styles.css
twidilers/ami/templates/: index.html  login.html  main.html  signup.html
twidilers/ami/templates/ami/: base.html  index.html  login.html  sign_up.html  signup.html
twidilers/base/: __init__.py  api.py  context_processors.py  decorators.py  email.py  generic_routes.py  models.py  oauth2_api.py  pages.py  routes.py  user_api.py
twidilers/base/static/javascript/: base.js  base2.js  beforeload.js  camera.js  feed.js  filtered.js  flyout.js  fontawesome.js  functions.md  hcaptcha.js  settings.js  test.js  welcome.js
twidilers/base/static/styles/: base.css  classes.css  feed.css  form.css  google.css  (+8 more)
twidilers/base/templates/: 404.html  about.html  base.html  feed.html  index.html  login.html  new-user.html  password-reset.html  post.html  postinfo.html  profile.html  settings.html  sign_up.html
twidilers/tests/: @pytest.py
(+31 files in other folders)
